[gd_scene load_steps=2 format=3 uid="uid://bg17fq0ypapsd"]

[ext_resource type="Script" uid="uid://m2nswlbydsty" path="res://scripts/menu/settings.gd" id="1_2nfyk"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2nfyk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="LanguageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LanguageButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer/MasterRow"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SfxRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="VBoxContainer/SfxRow"]
layout_mode = 2
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer/SfxRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicRow"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="VideoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DisplayModeRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DisplayModeLabel" type="Label" parent="VBoxContainer/DisplayModeRow"]
layout_mode = 2
text = "Display"

[node name="DisplayModeOption" type="OptionButton" parent="VBoxContainer/DisplayModeRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="ResolutionRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/ResolutionRow"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/ResolutionRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="VsyncRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="VBoxContainer/VsyncRow"]
layout_mode = 2
text = "VSync"

[node name="VsyncCheck" type="CheckBox" parent="VBoxContainer/VsyncRow"]
layout_mode = 2
text = "On"

[node name="FpsRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="VBoxContainer/FpsRow"]
layout_mode = 2
text = "Max FPS"

[node name="FpsOption" type="OptionButton" parent="VBoxContainer/FpsRow"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
